# clara-server

./: .dockerignore  .env.docker  .env.example  .gitignore  API_SPEC_CONVO_INT.md  CLARA_OAUTH_CONFIG.md  GOOGLE_OAUTH_CLI_SETUP.md  GOOGLE_OAUTH_QUICK_REFERENCE.md  GOOGLE_OAUTH_SETUP_GUIDE.md  IMPLEMENTATION_PLAN_CONVO_INT.md  Makefile  README.md  README_LOCATION.md  check_all_jobs.py  distance_service.py  docker-compose.yml  docker-setup.bat  docker-setup.sh  livekit_service.py  main.py  pyproject.toml  requirements.txt  reset_hvac_job.py  set_hvac_future.py  start_server.bat  update_job_past_due.py
auth/: __init__.py  models.py  routes.py  service.py
caching/: request_deduper.py  response_cache.py
context/: user_preferences.py
database/migrations/: 001_conversation_intelligence.sql
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DOCKER_SETUP.md  QUICK_START.md  README.md
init-scripts/: 01-init-schema.sql
init-scripts-timescale/: 01-init-timescale.sql
jobs/: data_capture.py  history_summarizer.py  models.py  service.py
knowledge/: common_problems.py  nfpa_service.py
manufacturer/: __init__.py  models.py  sample_data.py  service.py  web_scraper.py
monitoring/: __init__.py  metrics.py
nudges/: __init__.py  nudge_service.py
patterns/: __init__.py  pattern_learner.py
users/: __init__.py  routes.py  service.py
